Fixed the TopDownSolver to work for the unreversible puzzles; made Record work for both puzzles and games.
git-svn-id: https://gamescrafters.svn.sourceforge.net/svnroot/gamescrafters/GamesmanJava@4212 a668be5d-ef11-cb4c-8bfd-e08cbb24f2ba